--- a/metadata.yaml
+++ b/metadata.yaml
@@ -25,5 +25,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Portuguese -- Ethiopia -- History'
 - !lcc 'DT'
+- GITenberg
 title: Memoria ácerca dos Portuguezes na Abyssinia
 url: http://www.gutenberg.org/ebooks/30945
